save photo, asynkTask and cropping

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.photo.testphotodor">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <action android:name="android.media.action.IMAGE_CAPTURE"/>
     <category android:name="android.intent.category.DEFAULT"/>
     <uses-permission android:name="android.permission.CAMERA"/>
@@ -20,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailsActivity"></activity>
+        <activity android:name=".DetailsActivity"/>
     </application>
 
 </manifest>
